--- a/katze_east-membership/html/index.html
+++ b/katze_east-membership/html/index.html
@@ -7,7 +7,13 @@
 	<body>
 		<div id="container">
             <form id="form">
-                <input placeholder="Type here" id="input"></input>
+        <input type="checkbox" id="ELW1" name="ELW 1" value="ELW 1">
+        <label for="ELW1">ELW 1</label><br>
+        <input type="checkbox" id="HLF1" name="HLF 1" value="HLF 1">
+        <label for="HLF1">HLF 1</label><br>
+        <input type="checkbox" id="HLF2" name="HLF 2" value="HLF 2">
+        <label for="HLF2">HLF 2</label><br>
+
                 <br>
                 <button id="submit" type="submit">Submit</button>
                 <button id="close">Close</button>
