--- a/katze_east-membership/html/index.html
+++ b/katze_east-membership/html/index.html
@@ -7,12 +7,12 @@
 	<body>
 		<div id="container">
             <form id="form">
-        <input type="checkbox" id="ELW1" name="ELW 1" value="ELW 1">
-        <label for="ELW1">ELW 1</label><br>
-        <input type="checkbox" id="HLF1" name="HLF 1" value="HLF 1">
-        <label for="HLF1">HLF 1</label><br>
-        <input type="checkbox" id="HLF2" name="HLF 2" value="HLF 2">
-        <label for="HLF2">HLF 2</label><br>
+        <input type="checkbox" id="standart" name="Standart Mitgliedschaft" value="standart">
+        <label for="ELW1">Standart Mitgliedschaft</label><br>
+        <input type="checkbox" id="erweitert" name="Erweiterte Mitgliedschaft" value="erweitert">
+        <label for="HLF1">Erweitert Mitgliedschaft</label><br>
+        <input type="checkbox" id="premium" name="Premium Mitgliedschaft" value="premium">
+        <label for="HLF2">Premium Mitgliedschaft</label><br>
 
                 <br>
                 <button id="submit" type="submit">Submit</button>
